add visualizations bar to index page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,53 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-   
+    <div class = "container">
+      <div class = "row">
+        <div class = "col-md-8">
+          <article class = "description-content">
+            <h1 class = "description-header">Summary: Latitude Vs. X</h1>
+            <hr class = "description-hr">
+            <!-- Image -->
+            <img src = "images/Fig1.png" title = "City Latitude vs. Max Temperature" id = "description-image">
+            <!-- <a href="Images/Fig1.png"><img src="Images/Fig1.png" title="City Latitude Vs. Max Temp Plot" 
+              id = "description-image"> </a>   -->
+            <p>
+              The purpose of this project is to analyze weather changes in relation to latitude. 
+              The data set was created by pulling data from the OpenWeatherMap API for weather data 
+              from over 500 cities.
+            </p>
+            <p>
+              Procedure I guess...
+            </p>
+          </article>
+        </div>
+        <!-- links to each visualization page - a sidebar containing preview images of each plot, 
+          and clicking an image should take the user to that visualization.... -->
+        <div class = "col-md-4">
+          <section id = "imageNav-area">
+            <div class = "imageNav-content">
+              <h2 class = "imageNav-header"> Visualizations </h2>
+              <hr>
+              <div id = "images">
+                <a href = "temp.html">
+                  <img src = "images/Fig1.png" class = "imageNav-photo" title = "Latitude vs. Max Temp">
+                </a>
+                <a href = "humidity.html">
+                  <img src = "images/Fig2.png" class = "imageNav-photo" title = "Latitude vs. Humidity">
+                </a>
+                <a href = "cloudiness.html">
+                  <img src = "images/Fig3.png" class = "imageNav-photo" title = "Latitude vs. Cloudiness">
+                </a>
+                <a href = "wind.html">
+                  <img src = "images/Fig4.png" class = "imageNav-photo" title = "Latitude vs. Wind Speed">
+                </a>
+              </div>
+            </div>
+          </section>
+        </div>
+
+      </div>
+    </div>
     <!-- End of container -->
 
     <!-- Start of footer -->
