--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
               from over 500 cities.
             </p>
             <p>
-              Procedure I guess...
+              In order to visualize the data, MatPlotLib was used to plot temperature, humidity, cloudiness, and 
+              windspeed as a function of latitude. This site is a dashboard for viewing the data. 
             </p>
           </article>
         </div>
