create humnidity, temp, cloudiness, and windspeed pages

--- a/temp.html
+++ b/temp.html
@@ -57,7 +57,21 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-    
+    <div class = "container">
+      <div class = "row">
+        <div class = "col-md-10">
+          <article class = "description-content">
+            <h1 class = "description-header">Temperature vs. Latitude</h1>
+            <hr class = "description-hr">
+            <!-- Image -->
+            <img src = "images/Fig1.png" title = "Max Temperature vs. City Latitude" id = "description-image">
+            <p>
+              A description of this image...
+            </p>
+          </article>
+        </div>
+      </div>
+    </div>
     <!-- End of container -->
 
     <!-- Start of footer -->
