commit whatever I did last time lol

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1 class = "description-header">Summary: Latitude Vs. X</h1>
             <hr class = "description-hr">
             <!-- Image -->
-            <img src = "images/Fig1.png" title = "City Latitude vs. Max Temperature" id = "description-image">
+            <img src = "images/Fig1.png" title = "Max Temperature vs. City Latitude" id = "description-image">
             <!-- <a href="Images/Fig1.png"><img src="Images/Fig1.png" title="City Latitude Vs. Max Temp Plot" 
               id = "description-image"> </a>   -->
             <p>
