committing changes before using tidy

--- a/comparison.html
+++ b/comparison.html
@@ -57,7 +57,35 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-   
+    <div class = "container-lg">
+      <article class="description-content row">
+        <div class="col-md-12">
+          <h1 class = "comparison-header">Summary: Latitude Vs. X</h1>
+          <hr class = "comparison-hr">
+          <p>Click any image to got to the relevant analysis page.</p>
+        </div>
+        <div class="col-md-6">
+          <a href="temp.html">
+            <img src="images/Fig1.png" title="Max Temperature vs. City Latitude" class="comparison-image">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="humidity.html">
+            <img src="images/Fig2.png" title="Humidity vs. City Latitude" class="comparison-image">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="cloudiness.html">
+            <img src="images/Fig3.png" title="Cloudiness vs. City Latitude" class="comparison-image">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="wind.html">
+            <img src="images/Fig4.png" title="Windspeed vs. City Latitude" class="comparison-image">
+          </a>
+        </div>
+      </article>
+    </div>
     <!-- End of container -->
 
     <!-- Start of footer -->
