complete data.html

--- a/comparison.html
+++ b/comparison.html
@@ -57,12 +57,12 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-    <div class = "container-lg">
+    <div class = "container">
       <article class="description-content row">
         <div class="col-md-12">
           <h1 class = "comparison-header">Summary: Latitude Vs. X</h1>
           <hr class = "comparison-hr">
-          <p>Click any image to got to the relevant analysis page.</p>
+          <p class="comparison-paragraph">Click any image for the relevant analysis page.</p>
         </div>
         <div class="col-md-6">
           <a href="temp.html">
