use class not id for images

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     <!-- Start of container -->
     <div class = "container">
       <div class = "row">
-        <div class = "col-md-8">
+        <div class = "col-md-9">
           <article class = "description-content">
             <h1 class = "description-header">Summary: Latitude Vs. X</h1>
             <hr class = "description-hr">
             <!-- Image -->
-            <img src = "images/Fig1.png" title = "Max Temperature vs. City Latitude" id = "description-image">
+            <img src = "images/Fig1.png" title = "Max Temperature vs. City Latitude" class = "description-image">
             <!-- <a href="Images/Fig1.png"><img src="Images/Fig1.png" title="City Latitude Vs. Max Temp Plot" 
               id = "description-image"> </a>   -->
             <p>
@@ -80,7 +80,7 @@
         </div>
         <!-- links to each visualization page - a sidebar containing preview images of each plot, 
           and clicking an image should take the user to that visualization.... -->
-        <div class = "col-md-4">
+        <div class = "col-md-3">
           <section id = "imageNav-area">
             <div class = "imageNav-content">
               <h2 class = "imageNav-header"> Visualizations </h2>
