--- a/wind.html
+++ b/wind.html
@@ -59,12 +59,12 @@
     <!-- Start of container -->
     <div class = "container">
       <div class = "row">
-        <div class = "col-md-10">
+        <div class = "col">
           <article class = "description-content">
             <h1 class = "description-header">Windspeed vs. Latitude</h1>
             <hr class = "description-hr">
             <!-- Image -->
-            <img src = "images/Fig4.png" title = "Windspeed vs. City Latitude" id = "description-image">
+            <img src = "images/Fig4.png" title = "Windspeed vs. City Latitude" class = "description-image">
             <p>
               A description of this image...
             </p>
