in the wilderness

--- a/humidity.html
+++ b/humidity.html
@@ -64,9 +64,12 @@
             <h1 class = "description-header">Humidity vs. Latitude</h1>
             <hr class = "description-hr">
             <!-- Image -->
-            <img src = "images/Fig2.png" title = "Relative Humidity vs. City Latitude" class = "description-image">
+            <img src = "images/Fig2.png" title = "Relative Humidity vs. City Latitude" id = "description-image">
             <p>
-              A description of this image...
+              There are fewer data points at 100% humidity in the southern hemisphere. This could be 
+              due to the elevated temperatures south of the equator. At a higher temperature, air can 
+              hold more moisture and relative humidity decreases if the absolute humidity remains the same. 
+              It would be interesting to see data for these cities during other times of the year. 
             </p>
           </article>
         </div>
