--- a/temp.html
+++ b/temp.html
@@ -64,9 +64,14 @@
             <h1 class = "description-header">Temperature vs. Latitude</h1>
             <hr class = "description-hr">
             <!-- Image -->
-            <img src = "images/Fig1.png" title = "Max Temperature vs. City Latitude" class = "description-image">
+            <img src = "images/Fig1.png" title = "Max Temperature vs. City Latitude" id = "visualization-image">
             <p>
-              A description of this image...
+              This graph shows a clear correlation between latitude and temperature. 
+              The highest temperatures appear to be south of the equator, and this makes sense
+              given that measurements were taken in the  summer in the southern hemisphere. The temperatures begin to 
+              drop quickly moving north past the equator. The temperatures around zero 
+              latitude are grouped tightly compared to the rest of the world. There is 
+              much less variation there than other areas. 
             </p>
           </article>
         </div>
