--- a/wind.html
+++ b/wind.html
@@ -64,9 +64,11 @@
             <h1 class = "description-header">Windspeed vs. Latitude</h1>
             <hr class = "description-hr">
             <!-- Image -->
-            <img src = "images/Fig4.png" title = "Windspeed vs. City Latitude" class = "description-image">
+            <img src = "images/Fig4.png" title = "Windspeed vs. City Latitude" id = "description-image">
             <p>
-              A description of this image...
+              There are fewer extreme windspeeds around the equator. The equator may be more still than 
+              other parts of the globe. There also appear to be peaks close to -20 and -40 degrees latitude and 10 and 
+              40 degrees north latitude. 
             </p>
           </article>
         </div>
