--- a/cloudiness.html
+++ b/cloudiness.html
@@ -64,9 +64,9 @@
             <h1 class = "description-header">Cloudiness vs. Latitude</h1>
             <hr class = "description-hr">
             <!-- Image -->
-            <img src = "images/Fig3.png" title = "Cloudiness vs. City Latitude" class = "description-image">
+            <img src = "images/Fig3.png" title = "Cloudiness vs. City Latitude" id = "description-image">
             <p>
-              A description of this image...
+              There is no obvious correlation between cloudiness and latitude shown in this graph. 
             </p>
           </article>
         </div>
